# tasklog

./: .clang-format  CMakeLists.txt  LICENSE  README.md  resources.qrc
.github/workflows/: build.yml
icons/: README.md
share/: icon.icns  tasklog.desktop
share/ci/: build.py  config.py  get_qt.py  macdeploy.py  windeploy.py
src/: constants.h  debug.h  filewriter.cpp  filewriter.h  globalaction.cpp  globalaction.h  main.cpp  mainwindow.cpp  mainwindow.h  manager.cpp  manager.h  multicompletablelineedit.cpp  multicompletablelineedit.h  parser.cpp  parser.h  settings.cpp  settings.h  settingseditor.cpp  settingseditor.h  task.h  taskmodel.cpp  taskmodel.h  taskview.cpp  taskview.h  trayicon.cpp  trayicon.h
translations/: tasklog_ru.ts
